Fix text overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,7 @@ circle {
     stroke-width: 0.7;
     opacity: 0.5;
 }
+
+.fobj {
+    overflow: hidden;
+}
